--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Tally Wiesenberg
-subtitle: At the Intersection of Social Studies and Data Science
+title: Tally Wiesenberg's Data Science Blog
+subtitle: Reexamining Classic Ideas in Human Geography and Social Pscyhology
 use-site-title: true
 ---
 
