--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Tally Wiesenberg's Data Science Blog
+title: Tally Wiesenberg
 subtitle: Reexamining Classic Ideas in Human Geography and Social Pscyhology
 use-site-title: true
 ---
