--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Tally Wiesenberg
-subtitle: Reexamining Classic Ideas in Human Geography and Social Pscyhology
+subtitle: A Scattered Portfolio of Interests and Such...
 use-site-title: true
 ---
 <head>
